# context-weaver

./: Cargo.toml  README.md  parser.pest
src/: errors.rs  id.rs  lib.rs  parser.rs  parser.txt  registry.rs  tests.rs  types.rs
src/core/: mod.rs
src/core/functions/: mod.rs  modify.rs  pretty_print.rs  set.rs
src/core/nodes/: empty.rs  mod.rs  text.rs  variable.rs
src/core/processors/: mod.rs  plugin.rs  rng.rs  wildcard.rs
